# TooDeeEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Justfile  LICENSE  README.md  imgui.ini  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
Editor/: CMakeLists.txt
Editor/imgui/: CMakeLists.txt
Editor/include/: Editor.hpp  Examples.hpp
Editor/src/: Editor.cpp
Engine/: CMakeLists.txt
Engine/include/: Action.hpp  Animation.hpp  Assets.hpp  Components.hpp  Entity.hpp  GameEngine.hpp  Physics.hpp  Scene.hpp
Engine/src/: Action.cpp  Animation.cpp  Assets.cpp  Components.cpp  GameEngine.cpp  Physics.cpp  Scene.cpp
apps/editor/: CMakeLists.txt  config.ini  imgui.ini
apps/editor/include/: Editor.hpp  Examples.hpp  ImGuiComponents.hpp  ImGuiDirectoryView.hpp  Styles.hpp  bytesize.hpp
apps/editor/src/: Editor.cpp  ImGuiDirectoryView.cpp  main.cpp
examples/: CMakeLists.txt
examples/GridExample/: CMakeLists.txt  GridExample.cpp  GridExample.hpp  README.md
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.hpp  README.md
examples/MegaMario/: CMakeLists.txt  README.md
examples/MegaMario/MenuScene/: MegaMario_Menu.cpp
examples/MegaMario/PlayScene/: MegaMario_Play.cpp  MegaMario_Play.hpp
examples/MegaMario/Scenes/Menu/: CMakeLists.txt  MegaMario_Menu.cpp  MegaMario_Menu.hpp
examples/MegaMario/Scenes/Play/: CMakeLists.txt  MegaMario_Play.cpp
examples/MegaMario/include/: MegaMario.hpp  Scene_Menu.hpp  Scene_Play.hpp
examples/MegaMario/src/: MegaMario.cpp  Scene_Menu.cpp  Scene_Play.cpp  main.cpp
examples/MovingShapes/: CMakeLists.txt  MovingShapes.cpp  MovingShapes.hpp
examples/ShootEm/: CMakeLists.txt  README.md  ShootEm.wixproj  main.wxs
examples/ShootEm/Scenes/Menu/: CMakeLists.txt  ShootEm_Menu.cpp  ShootEm_Menu.hpp
examples/ShootEm/Scenes/Play/: CMakeLists.txt  GameConfig.cpp  GameConfig.hpp  ShootEm_Play.cpp  ShootEm_Play.hpp
examples/ShootEm/Shared/: CMakeLists.txt
examples/ShootEm/Shared/include/Components/: Button.hpp
examples/ShootEm/Shared/include/Layout/: Flex.hpp
examples/ShootEm/include/: Scene_Menu.hpp  Scene_Play.hpp  ShootEm.hpp  ShootEm_Menu.hpp  ShootEm_Play.hpp
examples/ShootEm/src/: Scene_Menu.cpp  Scene_Play.cpp  ShootEm.cpp  ShootEm_Menu.cpp  ShootEm_Play.cpp  main.cpp
examples/ShootEm/src/Components/: Button.cpp
examples/ShootEm/src/Layout/: Flex.cpp
examples/ShootEm/src/components/: Button.cpp
examples/ShootEm/src/layout/: Flex.cpp
examples/hello_world/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.hpp  README.md  config.ini  main.cpp
examples/javascript_scripting/: CMakeLists.txt  README.md  bounding_box_collision_script.js  bounding_circle_collision_script.js  config.ini  main.cpp
examples/javascript_scripting/assets/scripts/: bounding_box_collision_script.js  bounding_circle_collision_script.js
examples/javascript_scripting/src/: JavaScriptScripting.cpp  JavaScriptScripting.hpp  main.cpp
examples/lua_scripting/: CMakeLists.txt  LuaScripting.hpp  README.md  main.cpp
examples/lua_scripting/src/: LuaScripting.cpp  main.cpp
examples/moving_shapes/: CMakeLists.txt  MovingShapes.cpp  MovingShapes.hpp  README.md  config.ini  main.cpp
examples/moving_shapes/levels/: level.txt
examples/moving_shapes/src/: MovingShapes.cpp  MovingShapes.hpp  main.cpp
examples/native_scripting/: CMakeLists.txt  README.md  config.ini  main.cpp
examples/native_scripting/src/: NativeScripting.cpp  NativeScripting.hpp  main.cpp
examples/typescript_scripting/: CMakeLists.txt  README.md  config.ini  package.json  tsconfig.json  tsconfig.lib.json
examples/typescript_scripting/assets/scripts/cboundingbox/: README.md  package.json  tsconfig.json  tsconfig.lib.json
examples/typescript_scripting/assets/scripts/cboundingbox/src/: index.ts
examples/typescript_scripting/assets/scripts/cboundingcircle/: README.md  package.json  tsconfig.lib.json
examples/typescript_scripting/assets/scripts/cboundingcircle/src/: index.ts
examples/typescript_scripting/bounding_box_collision_script/: index.ts
examples/typescript_scripting/bounding_circle_collision_script/: index.ts  tsconfig.json
examples/typescript_scripting/include/: TypeScriptScripting.hpp
examples/typescript_scripting/scripts/: bounding_box_collision_script.ts  bounding_circle_collision_script.ts
examples/typescript_scripting/src/: TypeScriptScripting.cpp  main.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/: ClickListener.hpp  Core.hpp  HoverListener.hpp  Random.h  Vec2.hpp
libs/core/src/: HoverListener.cpp
libs/imgui/: CMakeLists.txt
libs/imgui-sfml/: CMakeLists.txt
libs/inih/: CMakeLists.txt
libs/sfml/: CMakeLists.txt
types/: too-dee-engine.d.ts
